--- a/index.html
+++ b/index.html
@@ -32,18 +32,6 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="projects.html">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="extras.html">Extras</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
             </ul>
         </div>
     </nav>
@@ -51,100 +39,106 @@
     <div class="container IndexContainer">
 
         <h1>Cats are life</h1>
+        <p>Type the following to see pictures of different breeds:</p>
+        <p>abys: Abyssian</p>
+        <p>beng: bengal</p>
+        <p>aege: Aegian</p>
+        <p>bomb: Bombay</p>
+        <p>dons: Donskoy</p>
         <br />
 
         <form>
-            <label>Enter a U.S. city</label>
+            <label>Enter the cat code</label>
             <input id="catInput" type="text" /><br />
             <input id="catSubmit" type="submit" value="Submit" />
         </form>
 
         <br />
 
-        <div id="carousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators"></ol>
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner"></div>
-            <!-- Controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
+        <div id="catsChar">
+
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators" id="catIndicator"></ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner"></div>
+                <!-- Controls -->
+                <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#demo" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+            </div>
+            <br />
+
+
+            </div>
+
+
         </div>
+
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
         <br />
 
-        <div id="catsChar" class="card">
-            <div class="card-body">
-            </div>
-        </div>
 
-
-    </div>
-
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <span class="copyright">Copyright &copy; LP 2019</span>
-                </div>
-                <div class="col-md-6">
-                    <ul class="list-inline social-buttons">
-                        <li class="list-inline-item">
-                            <a href="https://www.facebook.com/ladypulido94">
-                                <img src="Images/icons8-facebook-circled-48.png" />
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://github.com/ladypulido94/Creative_Project">
-                                <img src="Images/icons8-github-48.png" />
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.instagram.com/ladypulido94/">
-                                <img src="Images/icons8-instagram-old-48.png" />
-                            </a>
-                        </li>
-                    </ul>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <span class="copyright">Copyright &copy; LP 2019</span>
+                    </div>
+                    <div class="col-md-6">
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/ladypulido94">
+                                    <img src="Images/icons8-facebook-circled-48.png" />
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://github.com/ladypulido94/Creative_Project">
+                                    <img src="Images/icons8-github-48.png" />
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/ladypulido94/">
+                                    <img src="Images/icons8-instagram-old-48.png" />
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
-    
+
 </body>
 </html>
